--- a/OCR/packages.config
+++ b/OCR/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net48" />
+  <package id="AForge.Imaging" version="2.2.5" targetFramework="net48" />
+  <package id="AForge.Math" version="2.2.5" targetFramework="net48" />
   <package id="H.InputSimulator" version="1.4.1" targetFramework="net48" />
   <package id="Tesseract" version="5.2.0" targetFramework="net48" />
 </packages>
