--- a/OCR/packages.config
+++ b/OCR/packages.config
@@ -3,7 +3,6 @@
   <package id="AForge" version="2.2.5" targetFramework="net48" />
   <package id="AForge.Imaging" version="2.2.5" targetFramework="net48" />
   <package id="AForge.Math" version="2.2.5" targetFramework="net48" />
-  <package id="Emgu.CV" version="4.9.0.5494" targetFramework="net48" />
   <package id="H.InputSimulator" version="1.4.1" targetFramework="net48" />
   <package id="itext" version="8.0.5" targetFramework="net48" />
   <package id="itext.commons" version="8.0.5" targetFramework="net48" />
@@ -24,6 +23,7 @@
   <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
   <package id="System.Text.Json" version="8.0.1" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
