--- a/OCR/OCR.csproj
+++ b/OCR/OCR.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DocuCheck, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\source\repos\DocuCheck\DocuCheck\bin\Debug\net8.0\DocuCheck.dll</HintPath>
+    </Reference>
     <Reference Include="H.InputSimulator, Version=1.4.1.0, Culture=neutral, PublicKeyToken=603f13207e65c17b, processorArchitecture=MSIL">
       <HintPath>..\packages\H.InputSimulator.1.4.1\lib\net451\H.InputSimulator.dll</HintPath>
     </Reference>
